--- a/list/release/n1.htm
+++ b/list/release/n1.htm
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>guide</title>
-    <META http-equiv="refresh" content="0;URL=http://bit.ly/2hnWMEA">
+    <title>blank</title>
+    <META http-equiv="refresh" content="0;URL=http://bit.ly/2hIEU9L">
   </head>
 </html>
