--- a/itm/ws/gl1.htm
+++ b/itm/ws/gl1.htm
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>guide</title>
-    <META http-equiv="refresh" content="0;URL=http://bit.ly/2k5Srq3">
+    <title>DailyDeals</title>
+    <META http-equiv="refresh" content="0;URL=http://tinyurl.com/movfeoo">
   </head>
 </html>
